# asms-ml-short-course

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy-site.yml
2_dimensionality_reduction/: index.html
8_neural_networks/: index.html
content/: 01_introduction.ipynb  02_dimensionality-reduction.ipynb  03_clustering.ipynb  04_model-evaluation.ipynb  04_model-evaluation_02.ipynb  05_logistic-regression.ipynb  06_support-vector-machines.ipynb  07_decision-tree.ipynb  08_neural-networks.ipynb
data/: als_features.csv  als_filenames.csv
data/PXD006832/: Skyline_output_all_runs.csv
data/quality/: metadata.csv  test.csv  training.csv
docs/: 2_dimensionality_reduction.md  8_neural_networks.md  index.md
notebooks/: 06_svms.ipynb  08_neural_networks.ipynb  0_hello_world.ipynb  1_introduction.ipynb  3_clustering.ipynb  4_model_evaluation.ipynb  5_logistic-regression.ipynb  6_svms.ipynb  7_random_forest.ipynb  8_neural_networks.ipynb  bonus_1_regression.ipynb  bonus_2_neural_networks.ipynb  bonus_3_model_evaluation.ipynb
search/: search_index.json
src/: __init__.py  data.py  session_1.py  theme.py
stylesheets/: extra.css
